[project]
name = "rw-budget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
